      up for you, rather than not importing and telling you to clean it [Ralph]
    * The number of slices is now limited to 2.1 million because slice handles
      don't count up from 1, in order to fix "slice is valid". (Handles for
      slices in old saves still work) [Ralph]
    * "free slice" on an already freed slice no longer shows a warning [Ralph]

  *** Bugfixes
    * Various gfx_sdl2 window size/position/resizing and mouse glitches when
      entering/exiting fullscreen (e.g. bug #1190) [Ralph]
    * Re-did "mouse region" handling under gfx_sdl2 so the mouse moves/accelerates
      normally, and switching fullscreen/windowed doesn't break it.
      Also, entering a debug menu now pauses "mouse region" [Ralph]
    * Various gfx_fb bugfixes, including screen fades not happening, fullscreen
      not working at some zooms or picking awful aspect ratio wrong mouse cursor
      position and visibility in fullscreen, broken display at 1x zoom, and
      freezing. Thankfully noone uses gfx_fb. [Ralph]
    * Fix #1219 Global NPCs now properly support one-time-use tags [James]
    * Editing a single global NPC definition from NPC placement mode didn't save
      changes and caused crashes. Plus other global NPC bugfixes. [Ralph]
    * Global NPCs didn't reload while using Test Game. [Ralph]
    * At higher resolutions the map layers would be cropped to 320x200 for a
      tick when exiting the Spells, Equip or Save/Load menus [Ralph]
    * "free slice(0)" no longer shows a warning, I mean it this time! [Ralph]
    * Modifying an ellipse slice broke child clipping for one tick [Ralph]
    * Bug #1120 Heroes which have jumped count as dead for targetting [James]
    * Bug #1107 Can escape unescapable enemies who are jumping [James]
    * On Windows, detection of whether certain subprograms were installed was
      broken, giving strange errors about "_" [Ralph]
    * Fix transmogrification unhiding a enemy if they tansform in the middle