@@ -445,6 +445,7 @@ def verprint(mod, builddir, rootdir):
     data = {
         'codename': codename, 'date': date, 'arch': archinfo,
         'rev': rev, 'branch_rev': branch_rev, 'branch_name': branch_name,
+        'dash_date': build_date.strftime('%Y-%m-%d'),
         'buildname': mod.buildname,
         'name':   'OHRRPGCE',
         'gfx':    'gfx_' + "+".join(mod.gfx),
@@ -465,6 +466,10 @@ def verprint(mod, builddir, rootdir):
         'FreeBASIC %(fbver)s %(ccver)s %(arch)s %(sse2)s%(asan)s%(win95)s%(portable)s%(pdb)s'
         'buildname=%(buildname)s  Built on %(uname)s'
     ) % data
+    if branch_name == 'wip':
+        data['release_tag'] = '-wip'
+    else:
+        data['release_tag'] = '-%(dash_date)s-%(branch_name)s' % data
 
     globals_bas = [
         "' This file is autogenerated by ohrbuild.verprint()",
@@ -477,6 +482,7 @@ def verprint(mod, builddir, rootdir):
         'DIM version_arch as string : version_arch = "%(arch)s"' % data,
         'DIM version_revision as integer = %(rev)d' % data,
         'DIM version_date as integer = %(date)s' % data,
+        'DIM version_release_tag as string : version_release_tag = "%(release_tag)s"' % data,
         'DIM version_branch as string : version_branch = "%(branch_name)s"' % data,
         'DIM version_branch_revision as integer = %(branch_rev)s' % data,
         ('DIM long_version as string : long_version = "%(long_version)s"') % data,
@@ -497,6 +503,13 @@ def verprint(mod, builddir, rootdir):
         "music=%(music_list)s",
     ]
 
+    distver_bat = [
+        'SET OHRVERCODE=%(codename)s',
+        'SET OHRVERBRANCH=%(branch_name)s',
+        'SET OHRVERDATE=%(dash_date)s',
+        'SET SVNREV=%(rev)s',
+    ]
+
     write_file(builddir + 'backendinfo.bi',
                '\n'.join (backendinfo) + '\n')
     write_file(builddir + 'globals.bas',
@@ -504,10 +517,7 @@ def verprint(mod, builddir, rootdir):
     write_file(rootdir + 'buildinfo.ini',
                '\n'.join(buildinfo) % data + '\n')
     write_file('distver.bat',
-               ('SET OHRVERCODE=%s\n' % codename +
-                'SET OHRVERBRANCH=%s\n' % branch_name +
-                'SET OHRVERDATE=%s\n' % build_date.strftime('%Y-%m-%d') +
-                'SET SVNREV=%s' % rev))
+               '\n'.join(distver_bat) % data)
 
 ########################################################################
 # Embedding data files
